tests/ui/extractors_out_of_order.stderr
error: arguments must be in order: Path, Query, Body, Request
  --> tests/ui/extractors_out_of_order.rs:25:24
   |
25 |         path: gropius::Path<WidgetId>,
   |                        ^^^^
